[gd_scene load_steps=18 format=4 uid="uid://dr0lbub8tx4ig"]

[ext_resource type="Script" path="res://level.gd" id="1_blkak"]
[ext_resource type="PackedScene" uid="uid://68egir1faxek" path="res://player.tscn" id="2_knipl"]
[ext_resource type="PackedScene" uid="uid://cvp28h5i7cejg" path="res://camera_and_ui.tscn" id="3_ym7fs"]
[ext_resource type="PackedScene" uid="uid://cxpwmerqyiawe" path="res://terrain.tscn" id="4_c7ti7"]
[ext_resource type="PackedScene" uid="uid://j1b5p86sdmes" path="res://background.tscn" id="5_sq2x1"]
[ext_resource type="PackedScene" uid="uid://bsxsradwonl6o" path="res://computer1.tscn" id="6_v3yo5"]
[ext_resource type="PackedScene" uid="uid://d1wycrtpc1w2a" path="res://crate.tscn" id="7_rx8wt"]
[ext_resource type="PackedScene" uid="uid://clls4866wc4vi" path="res://gravity-affected_crate.tscn" id="8_157rd"]
[ext_resource type="PackedScene" uid="uid://7s75j456v5ec" path="res://pipe_fore.tscn" id="9_iw62d"]
[ext_resource type="Texture2D" uid="uid://cikdd5dnqggi6" path="res://assets/graphics/pipe-fore.png" id="9_kaaah"]
[ext_resource type="PackedScene" uid="uid://dxjssjil3ab16" path="res://LevelMusic.tscn" id="10_v07d4"]
[ext_resource type="PackedScene" uid="uid://c1uqf707mmgoo" path="res://ladder.tscn" id="11_hmgbi"]
[ext_resource type="Script" path="res://death.gd" id="12_rkepe"]
[ext_resource type="AudioStream" uid="uid://t0q487agrej1" path="res://assets/audio/levelwin.wav" id="13_c8f7v"]
[ext_resource type="AudioStream" uid="uid://xdbjdsxc57nu" path="res://assets/audio/levelfail.wav" id="14_styiq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8dgx"]
size = Vector2(72.3637, 56.5657)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ju3k"]
size = Vector2(0, 212)

[node name="Level4" type="Node2D"]
script = ExtResource("1_blkak")
NUMBER_OF_OBJECTS_TO_DESTROY = 2
RESPAWN_LIMIT = 4
TIME_BEFORE_KIWI_DETONATES = 15
time_limit_to_get_star = 20.0

[node name="Player" parent="." instance=ExtResource("2_knipl")]
position = Vector2(112, 40)

[node name="CameraAndUI" parent="." instance=ExtResource("3_ym7fs")]

[node name="Terrain" parent="." instance=ExtResource("4_c7ti7")]
tile_map_data = PackedByteArray("AAACAAEAAAAEAAEAAAACAAAAAAADAAEAAAACAP//AAADAAEAAAACAP7/AAACAAEAAAD+/wEAAAAEAAAAAAD//wEAAAADAAAAAAAAAAEAAAAFAAAAAAABAAEAAAACAAAAAAAGAAEAAAAEAAEAAAAGAAAAAAAEAAEAAAAGAP//AAAEAAEAAAAGAP7/AAAEAAEAAAAGAP3/AAAEAAEAAAAGAPz/AAAEAAEAAAAGAPv/AAAEAAEAAAAGAPr/AAAEAAEAAAAFAAEAAAAEAAEAAAAFAAAAAAAEAAEAAAAFAP//AAAEAAEAAAAFAP7/AAAEAAEAAAAFAP3/AAAEAAEAAAAFAPz/AAAEAAEAAAAFAPv/AAAEAAEAAAAFAPr/AAAEAAEAAAAEAAEAAAAEAAEAAAAEAAAAAAAEAAEAAAAEAP//AAAEAAEAAAAEAP7/AAAEAAEAAAAEAP3/AAAEAAEAAAAEAPz/AAAEAAEAAAAEAPv/AAAEAAEAAAAEAPr/AAAEAAEAAAADAAEAAAAEAAEAAAADAAAAAAAEAAEAAAADAP//AAAEAAEAAAADAP7/AAAEAAEAAAADAP3/AAAEAAEAAAADAPz/AAAEAAEAAAADAPv/AAAEAAEAAAADAPr/AAAEAAEAAAACAP3/AAAAAAEAAAACAPz/AAAAAAEAAAACAPv/AAAAAAEAAAACAPr/AAADAAEAAAAGAAQAAAAEAAEAAAAGAAMAAAAEAAEAAAAGAAIAAAAEAAEAAAAFAAQAAAAEAAEAAAAFAAMAAAAEAAEAAAAFAAIAAAAEAAEAAAAEAAQAAAAEAAEAAAAEAAMAAAAEAAEAAAAEAAIAAAAEAAEAAAADAAQAAAAEAAEAAAADAAMAAAAEAAEAAAADAAIAAAAEAAEAAAACAAQAAAAEAAEAAAACAAMAAAAEAAEAAAACAAIAAAAEAAEAAAABAAQAAAAEAAEAAAABAAMAAAAEAAEAAAABAAIAAAAEAAEAAAAAAAQAAAAEAAEAAAAAAAMAAAAEAAEAAAAAAAIAAAAEAAEAAAD//wQAAAAEAAEAAAD//wMAAAAEAAEAAAD//wIAAAAEAAEAAAD+/wQAAAAEAAEAAAD+/wMAAAAEAAEAAAD+/wIAAAAEAAEAAAD9/wQAAAAEAAEAAAD9/wMAAAAEAAEAAAD9/wIAAAAEAAEAAAD9/wEAAAAGAAAAAAD8/wQAAAAEAAEAAAD8/wMAAAAEAAEAAAD8/wIAAAAEAAEAAAD8/wEAAAAFAAAAAAD7/wQAAAAEAAEAAAD7/wMAAAAEAAEAAAD7/wIAAAAEAAEAAAD7/wEAAAAGAAAAAAD6/wQAAAAEAAEAAAD6/wMAAAAEAAEAAAD6/wIAAAAEAAEAAAD6/wEAAAAGAAAAAAD5/wQAAAAEAAEAAAD5/wMAAAAEAAEAAAD5/wIAAAAEAAEAAAD5/wEAAAACAAAAAAD+//3/AAAHAAIAAAD+//z/AAAGAAEAAAD9//3/AAAEAAIAAAD9//z/AAAEAAEAAAD8//3/AAAEAAIAAAD8//z/AAAEAAEAAAD7//3/AAAGAAIAAAD7//z/AAAEAAEAAAD6//3/AAAGAAIAAAD6//z/AAAEAAEAAAD5//3/AAAEAAIAAAD5//z/AAAEAAEAAAD+//v/AAAFAAEAAAD+//r/AAAHAAAAAAD9//v/AAAEAAEAAAD9//r/AAADAAAAAAD8//v/AAAEAAEAAAD8//r/AAAFAAAAAAD7//v/AAAEAAEAAAD7//r/AAACAAAAAAD6//v/AAAEAAEAAAD6//r/AAADAAAAAAD5//v/AAAEAAEAAAD5//r/AAAFAAAAAAAGAPn/AAAEAAEAAAAGAPj/AAAEAAEAAAAGAPf/AAAEAAEAAAAGAPb/AAAEAAEAAAAGAPX/AAAEAAEAAAAFAPn/AAAEAAEAAAAFAPj/AAAEAAEAAAAFAPf/AAAEAAEAAAAFAPb/AAAEAAEAAAAFAPX/AAAEAAEAAAAEAPn/AAAEAAEAAAAEAPj/AAAEAAEAAAAEAPf/AAAEAAEAAAAEAPb/AAAEAAEAAAAEAPX/AAAEAAEAAAADAPn/AAAEAAEAAAADAPj/AAAEAAEAAAADAPf/AAAEAAEAAAADAPb/AAAEAAEAAAADAPX/AAAEAAEAAAACAPn/AAACAAEAAAACAPj/AAAAAAEAAAACAPf/AAABAAEAAAACAPb/AAADAAEAAAACAPX/AAAAAAEAAAD+//b/AAAIAAIAAAD+//X/AAAHAAEAAAD9//b/AAAEAAIAAAD9//X/AAAEAAEAAAD8//b/AAAGAAIAAAD8//X/AAAEAAEAAAD7//b/AAAGAAIAAAD7//X/AAAEAAEAAAD6//b/AAAAAAIAAAD6//X/AAACAAEAAAD4//3/AAADAAIAAAD4//z/AAAEAAEAAAD4//v/AAAEAAEAAAD4//r/AAAEAAEAAAD4//n/AAAHAAAAAAD3//3/AAADAAIAAAD3//z/AAAEAAEAAAD3//v/AAAEAAEAAAD3//r/AAAEAAEAAAD3//n/AAAEAAEAAAD3//j/AAAIAAAAAAD2//3/AAAGAAIAAAD2//z/AAAEAAEAAAD2//v/AAAEAAEAAAD2//r/AAAEAAEAAAD2//n/AAAEAAEAAAD2//j/AAAFAAAAAAD1//3/AAABAAIAAAD1//z/AAABAAEAAAD1//v/AAABAAEAAAD1//r/AAADAAEAAAD1//n/AAABAAEAAAD1//j/AAAAAAAAAAD4/wQAAAAEAAEAAAD4/wMAAAAEAAEAAAD4/wIAAAAEAAEAAAD4/wEAAAAFAAAAAAD3/wQAAAAEAAEAAAD3/wMAAAAEAAEAAAD3/wIAAAAEAAEAAAD3/wEAAAAGAAAAAAD2/wQAAAAEAAEAAAD2/wMAAAAEAAEAAAD2/wIAAAAEAAEAAAD2/wEAAAAEAAAAAAD1/wQAAAAEAAEAAAD1/wMAAAAEAAEAAAD1/wIAAAAEAAEAAAD1/wEAAAAFAAAAAAD0/wQAAAAEAAEAAAD0/wMAAAAEAAEAAAD0/wIAAAAEAAEAAAD0/wEAAAAEAAAAAADz/wQAAAAEAAEAAADz/wMAAAAEAAEAAADz/wIAAAAEAAEAAADz/wEAAAAEAAAAAADy/wQAAAAEAAEAAADy/wMAAAAEAAEAAADy/wIAAAAEAAEAAADy/wEAAAAEAAAAAADx/wQAAAAEAAEAAADx/wMAAAAEAAEAAADx/wIAAAAEAAEAAADx/wEAAAAEAAAAAAAGAAcAAAADAAIAAAAGAAYAAAAEAAEAAAAGAAUAAAAEAAEAAAAFAAcAAAACAAIAAAAFAAYAAAAEAAEAAAAFAAUAAAAEAAEAAAAEAAcAAAACAAIAAAAEAAYAAAAEAAEAAAAEAAUAAAAEAAEAAAADAAcAAAAEAAIAAAADAAYAAAAEAAEAAAADAAUAAAAEAAEAAAACAAcAAAADAAIAAAACAAYAAAAEAAEAAAACAAUAAAAEAAEAAAABAAcAAAAGAAIAAAABAAYAAAAEAAEAAAABAAUAAAAEAAEAAAAAAAcAAAACAAIAAAAAAAYAAAAEAAEAAAAAAAUAAAAEAAEAAAD//wcAAAAEAAIAAAD//wYAAAAEAAEAAAD//wUAAAAEAAEAAAD+/wcAAAADAAIAAAD+/wYAAAAEAAEAAAD+/wUAAAAEAAEAAAD9/wcAAAACAAIAAAD9/wYAAAAEAAEAAAD9/wUAAAAEAAEAAAD8/wcAAAACAAIAAAD8/wYAAAAEAAEAAAD8/wUAAAAEAAEAAAD7/wcAAAAEAAIAAAD7/wYAAAAEAAEAAAD7/wUAAAAEAAEAAAD6/wcAAAAEAAIAAAD6/wYAAAAEAAEAAAD6/wUAAAAEAAEAAAD5/wcAAAADAAIAAAD5/wYAAAAEAAEAAAD5/wUAAAAEAAEAAAD4/wcAAAACAAIAAAD4/wYAAAAEAAEAAAD4/wUAAAAEAAEAAAD3/wcAAAAGAAIAAAD3/wYAAAAEAAEAAAD3/wUAAAAEAAEAAAD2/wcAAAACAAIAAAD2/wYAAAAEAAEAAAD2/wUAAAAEAAEAAAD1/wcAAAAEAAIAAAD1/wYAAAAEAAEAAAD1/wUAAAAEAAEAAAD0/wcAAAACAAIAAAD0/wYAAAAEAAEAAAD0/wUAAAAEAAEAAADz/wcAAAAEAAIAAADz/wYAAAAEAAEAAADz/wUAAAAEAAEAAADy/wcAAAACAAIAAADy/wYAAAAEAAEAAADy/wUAAAAEAAEAAADx/wcAAAAEAAIAAADx/wYAAAAEAAEAAADx/wUAAAAEAAEAAAAIAAcAAAADAAIAAAAIAAYAAAAEAAEAAAAIAAUAAAAEAAEAAAAIAAQAAAAEAAEAAAAIAAMAAAAEAAEAAAAIAAIAAAAEAAEAAAAIAAEAAAAEAAEAAAAIAAAAAAAEAAEAAAAIAP//AAAEAAEAAAAIAP7/AAAEAAEAAAAIAP3/AAAEAAEAAAAIAPz/AAAEAAEAAAAIAPv/AAAEAAEAAAAIAPr/AAAEAAEAAAAIAPn/AAAEAAEAAAAIAPj/AAAEAAEAAAAIAPf/AAAEAAEAAAAIAPb/AAAEAAEAAAAIAPX/AAAEAAEAAAAHAAcAAAAEAAIAAAAHAAYAAAAEAAEAAAAHAAUAAAAEAAEAAAAHAAQAAAAEAAEAAAAHAAMAAAAEAAEAAAAHAAIAAAAEAAEAAAAHAAEAAAAEAAEAAAAHAAAAAAAEAAEAAAAHAP//AAAEAAEAAAAHAP7/AAAEAAEAAAAHAP3/AAAEAAEAAAAHAPz/AAAEAAEAAAAHAPv/AAAEAAEAAAAHAPr/AAAEAAEAAAAHAPn/AAAEAAEAAAAHAPj/AAAEAAEAAAAHAPf/AAAEAAEAAAAHAPb/AAAEAAEAAAAHAPX/AAAEAAEAAADz//3/AAAFAAIAAADz//z/AAAGAAEAAADz//v/AAAHAAEAAADz//r/AAAFAAEAAADz//n/AAAFAAEAAADz//j/AAAHAAAAAADy//3/AAAGAAIAAADy//z/AAAEAAEAAADy//v/AAAEAAEAAADy//r/AAAEAAEAAADy//n/AAAEAAEAAADy//j/AAAFAAAAAADx//3/AAAGAAIAAADx//z/AAAEAAEAAADx//v/AAAEAAEAAADx//r/AAAEAAEAAADx//n/AAAEAAEAAADx//j/AAAFAAAAAADw//3/AAAEAAEAAADw//z/AAAEAAEAAADw//v/AAAEAAEAAADw//r/AAAEAAEAAADw//n/AAAEAAEAAADw//j/AAAFAAAAAADv//3/AAAEAAEAAADv//z/AAAEAAEAAADv//v/AAAEAAEAAADv//r/AAAEAAEAAADv//n/AAAEAAEAAADv//j/AAAGAAAAAADu//3/AAAEAAEAAADu//z/AAAEAAEAAADu//v/AAAEAAEAAADu//r/AAAEAAEAAADu//n/AAAEAAEAAADu//j/AAAGAAAAAADt//3/AAAEAAEAAADt//z/AAAEAAEAAADt//v/AAAEAAEAAADt//r/AAAEAAEAAADt//n/AAAEAAEAAADt//j/AAAFAAAAAADs//3/AAAEAAEAAADs//z/AAAEAAEAAADs//v/AAAEAAEAAADs//r/AAAEAAEAAADs//n/AAAEAAEAAADs//j/AAAFAAAAAADr//3/AAACAAIAAADr//z/AAAEAAEAAADr//v/AAAEAAEAAADr//r/AAAEAAEAAADr//n/AAAEAAEAAADr//j/AAACAAAAAADq//3/AAAEAAIAAADq//z/AAAEAAEAAADq//v/AAAEAAEAAADq//r/AAAEAAEAAADq//n/AAAEAAEAAADq//j/AAAFAAAAAADp//3/AAADAAIAAADp//z/AAAEAAEAAADp//v/AAAEAAEAAADp//r/AAAEAAEAAADp//n/AAAEAAEAAADp//j/AAAFAAAAAADo//3/AAAEAAEAAADo//z/AAAEAAEAAADo//v/AAAEAAEAAADo//r/AAAEAAEAAADo//n/AAAEAAEAAADo//j/AAADAAAAAADw/wYAAAAEAAEAAADw/wUAAAAEAAEAAADw/wQAAAAEAAEAAADw/wMAAAAEAAEAAADw/wIAAAAEAAEAAADw/wEAAAAEAAEAAADw/wAAAAAHAAAAAADv/wYAAAAEAAEAAADv/wUAAAAEAAEAAADv/wQAAAAEAAEAAADv/wMAAAAEAAEAAADv/wIAAAAEAAEAAADv/wEAAAAEAAEAAADv/wAAAAAEAAAAAADu/wYAAAAEAAEAAADu/wUAAAAEAAEAAADu/wQAAAAEAAEAAADu/wMAAAAEAAEAAADu/wIAAAAEAAEAAADu/wEAAAAEAAEAAADu/wAAAAAGAAAAAADt/wYAAAAEAAEAAADt/wUAAAAEAAEAAADt/wQAAAAEAAEAAADt/wMAAAAEAAEAAADt/wIAAAAEAAEAAADt/wEAAAAEAAEAAADt/wAAAAAEAAAAAADs/wYAAAAEAAEAAADs/wUAAAAEAAEAAADs/wQAAAAEAAEAAADs/wMAAAAEAAEAAADs/wIAAAAEAAEAAADs/wEAAAAEAAEAAADs/wAAAAAFAAAAAADw//7/AAAIAAIAAADv//7/AAADAAIAAADu//7/AAADAAIAAADt//7/AAAEAAIAAADs//7/AAAAAAIAAADo/wQAAAAEAAEAAADo/wMAAAAEAAEAAADo/wIAAAAEAAEAAADo/wEAAAAEAAEAAADo/wAAAAAEAAEAAADo////AAAHAAEAAADo//7/AAAGAAEAAADn/wQAAAAEAAEAAADn/wMAAAAEAAEAAADn/wIAAAAEAAEAAADn/wEAAAAEAAEAAADn/wAAAAAEAAEAAADn////AAAEAAEAAADn//7/AAAEAAEAAADn//3/AAAEAAEAAADn//z/AAAEAAEAAADn//v/AAAEAAEAAADn//r/AAAEAAEAAADn//n/AAAEAAEAAADn//j/AAAEAAAAAADw/wcAAAADAAIAAADv/wcAAAAGAAIAAADu/wcAAAAEAAIAAADt/wcAAAAEAAIAAADs/wcAAAAGAAIAAADr/wcAAAAGAAIAAADr/wYAAAAEAAEAAADq/wcAAAADAAIAAADq/wYAAAAEAAEAAADp/wcAAAADAAIAAADp/wYAAAAEAAEAAADo/wcAAAAGAAIAAADo/wYAAAAEAAEAAADn/wcAAAAEAAIAAADn/wYAAAAEAAEAAADr/wUAAAAEAAEAAADr/wQAAAAEAAEAAADr/wMAAAAEAAEAAADr/wIAAAAEAAEAAADr/wEAAAAEAAEAAADr/wAAAAAGAAAAAADq/wUAAAAEAAEAAADq/wQAAAAEAAEAAADq/wMAAAAEAAEAAADq/wIAAAAEAAEAAADq/wEAAAAEAAEAAADq/wAAAAACAAAAAADp/wUAAAAEAAEAAADp/wQAAAAEAAEAAADp/wMAAAAEAAEAAADp/wIAAAAEAAEAAADp/wEAAAAEAAEAAADp/wAAAAAGAAAAAADo/wUAAAAEAAEAAADn/wUAAAAEAAEAAADz//T/AAAHAAIAAADz//P/AAAHAAAAAADy//T/AAACAAIAAADy//P/AAAGAAAAAADx//T/AAAEAAIAAADx//P/AAAEAAAAAADw//T/AAAEAAIAAADw//P/AAADAAAAAADv//T/AAADAAIAAADv//P/AAAEAAAAAADu//T/AAAGAAIAAADu//P/AAAEAAAAAADt//T/AAAGAAIAAADt//P/AAAEAAAAAADs//T/AAAEAAIAAADs//P/AAAGAAAAAADr//T/AAAEAAIAAADr//P/AAAEAAEAAADq//T/AAADAAIAAADq//P/AAAEAAEAAADp//T/AAAEAAIAAADp//P/AAAEAAEAAADo//T/AAACAAIAAADo//P/AAAEAAEAAADn//T/AAAGAAIAAADn//P/AAAEAAEAAAD+//T/AAAHAAEAAAD+//P/AAAHAAEAAAD+//L/AAAIAAEAAAD+//H/AAAGAAEAAAD9//T/AAAEAAEAAAD9//P/AAAEAAEAAAD9//L/AAAEAAEAAAD9//H/AAAEAAEAAAD8//T/AAAEAAEAAAD8//P/AAAEAAEAAAD8//L/AAAEAAEAAAD8//H/AAAEAAEAAAD7//T/AAAEAAEAAAD7//P/AAAEAAEAAAD7//L/AAAEAAEAAAD7//H/AAAEAAEAAAD6//T/AAABAAEAAAD6//P/AAADAAEAAAD6//L/AAACAAEAAAD6//H/AAADAAEAAAAIAPT/AAAEAAEAAAAIAPP/AAAEAAEAAAAIAPL/AAAEAAEAAAAIAPH/AAAEAAEAAAAHAPT/AAAEAAEAAAAHAPP/AAAEAAEAAAAHAPL/AAAEAAEAAAAHAPH/AAAEAAEAAAAGAPT/AAAEAAEAAAAGAPP/AAAEAAEAAAAGAPL/AAAEAAEAAAAGAPH/AAAEAAEAAAAFAPT/AAAEAAEAAAAFAPP/AAAEAAEAAAAFAPL/AAAEAAEAAAAFAPH/AAAEAAEAAAAEAPT/AAAEAAEAAAAEAPP/AAAEAAEAAAAEAPL/AAAEAAEAAAAEAPH/AAAEAAEAAAADAPT/AAAEAAEAAAADAPP/AAAEAAEAAAADAPL/AAAEAAEAAAADAPH/AAAEAAEAAAACAPT/AAAAAAEAAAACAPP/AAADAAEAAAACAPL/AAABAAEAAAACAPH/AAABAAEAAADr//L/AAAFAAEAAADr//H/AAAIAAEAAADr//D/AAAIAAEAAADr/+//AAAEAAEAAADq//L/AAAEAAEAAADq//H/AAAEAAEAAADq//D/AAAEAAEAAADq/+//AAAEAAEAAADp//L/AAAEAAEAAADp//H/AAAEAAEAAADp//D/AAAEAAEAAADp/+//AAAEAAEAAADo//L/AAAEAAEAAADo//H/AAAEAAEAAADo//D/AAAEAAEAAADo/+//AAAEAAEAAADn//L/AAAEAAEAAADn//H/AAAEAAEAAADn//D/AAAEAAEAAADn/+//AAAEAAEAAAAIAO//AAAEAAEAAAAIAO7/AAAEAAEAAAAIAO3/AAAEAAEAAAAHAO//AAAEAAEAAAAHAO7/AAAEAAEAAAAHAO3/AAAEAAEAAAAGAO//AAAEAAEAAAAGAO7/AAAEAAEAAAAGAO3/AAAEAAEAAAAFAO//AAAEAAEAAAAFAO7/AAAEAAEAAAAFAO3/AAAEAAEAAAAEAO//AAAEAAEAAAAEAO7/AAAEAAEAAAAEAO3/AAAEAAEAAAADAO//AAAEAAEAAAADAO7/AAAEAAEAAAADAO3/AAAEAAEAAAACAO//AAAEAAEAAAACAO7/AAAEAAEAAAACAO3/AAAEAAEAAAABAO//AAACAAIAAAABAO7/AAAEAAEAAAABAO3/AAAEAAEAAAAAAO//AAAGAAIAAAAAAO7/AAAEAAEAAAAAAO3/AAAEAAEAAAD//+//AAACAAIAAAD//+7/AAAEAAEAAAD//+3/AAAEAAEAAAD+/+//AAAEAAEAAAD+/+7/AAAEAAEAAAD+/+3/AAAEAAEAAAD9/+//AAAEAAEAAAD9/+7/AAAEAAEAAAD9/+3/AAAEAAEAAAD8/+//AAAEAAEAAAD8/+7/AAAEAAEAAAD8/+3/AAAEAAEAAAD7/+//AAAEAAEAAAD7/+7/AAAEAAEAAAD7/+3/AAAEAAEAAAD6/+//AAAEAAEAAAD6/+7/AAAEAAEAAAD6/+3/AAAEAAEAAAD5/+//AAAEAAIAAAD5/+7/AAAEAAEAAAD5/+3/AAAEAAEAAAD4/+//AAADAAIAAAD4/+7/AAAEAAEAAAD4/+3/AAAEAAEAAAD3/+//AAAGAAIAAAD3/+7/AAAEAAEAAAD3/+3/AAAEAAEAAAD2/+//AAAEAAIAAAD2/+7/AAAEAAEAAAD2/+3/AAAEAAEAAAD1/+//AAAEAAIAAAD1/+7/AAAEAAEAAAD1/+3/AAAEAAEAAAD0/+//AAADAAIAAAD0/+7/AAAEAAEAAAD0/+3/AAAEAAEAAADz/+//AAAEAAIAAADz/+7/AAAEAAEAAADz/+3/AAAEAAEAAADy/+//AAAEAAIAAADy/+7/AAAEAAEAAADy/+3/AAAEAAEAAADx/+//AAADAAIAAADx/+7/AAAEAAEAAADx/+3/AAAEAAEAAADw/+//AAACAAIAAADw/+7/AAAEAAEAAADw/+3/AAAEAAEAAADv/+//AAAEAAIAAADv/+7/AAAEAAEAAADv/+3/AAAEAAEAAADu/+//AAACAAIAAADu/+7/AAAEAAEAAADu/+3/AAAEAAEAAADt/+//AAADAAIAAADt/+7/AAAEAAEAAADt/+3/AAAEAAEAAADs/+//AAAEAAIAAADs/+7/AAAEAAEAAADs/+3/AAAEAAEAAADr/+7/AAAEAAEAAADr/+3/AAAEAAEAAADq/+7/AAAEAAEAAADq/+3/AAAEAAEAAADp/+7/AAAEAAEAAADp/+3/AAAEAAEAAADo/+7/AAAEAAEAAADo/+3/AAAEAAEAAADn/+7/AAAEAAEAAADn/+3/AAAEAAEAAAAIAPD/AAAEAAEAAAAHAPD/AAAEAAEAAAAGAPD/AAAEAAEAAAAFAPD/AAAEAAEAAAAEAPD/AAAEAAEAAAADAPD/AAAEAAEAAAACAPD/AAADAAEAAAD+//D/AAAHAAEAAAD9//D/AAAEAAEAAAD8//D/AAAEAAEAAAD7//D/AAAEAAEAAAD6//D/AAADAAEAAAD1//P/AAAAAAAAAAD2//T/AAAIAAIAAAD2//P/AAAHAAAAAAD1//T/AAAAAAIAAADm/wIAAAAEAAEAAADm/wEAAAAEAAEAAADm/wAAAAAEAAEAAADm////AAAEAAEAAADm//7/AAAEAAEAAADm//3/AAAEAAEAAADm//z/AAAEAAEAAADm//v/AAAEAAEAAADm//r/AAAEAAEAAADm//n/AAAEAAEAAADl/wIAAAAEAAEAAADl/wEAAAAEAAEAAADl/wAAAAAEAAEAAADl////AAAEAAEAAADl//7/AAAEAAEAAADl//3/AAAEAAEAAADl//z/AAAEAAEAAADl//v/AAAEAAEAAADl//r/AAACAAEAAADl//n/AAABAAAAAADk/wIAAAAEAAEAAADk/wEAAAAEAAEAAADk/wAAAAAEAAEAAADk////AAAEAAEAAADk//7/AAAEAAEAAADk//3/AAAEAAEAAADk//z/AAAEAAEAAADk//v/AAAGAAAAAADm/wcAAAAGAAIAAADm/wYAAAAEAAEAAADm/wUAAAAEAAEAAADm/wQAAAAEAAEAAADm/wMAAAAEAAEAAADm//j/AAAAAAAAAADl/wcAAAACAAIAAADl/wYAAAAEAAEAAADl/wUAAAAEAAEAAADl/wQAAAAEAAEAAADl/wMAAAAEAAEAAADk/wcAAAAEAAIAAADk/wYAAAAEAAEAAADk/wUAAAAEAAEAAADk/wQAAAAEAAEAAADk/wMAAAAEAAEAAADm//T/AAAGAAIAAADm//P/AAAEAAEAAADm//L/AAAEAAEAAADm//H/AAAEAAEAAADm//D/AAAEAAEAAADm/+//AAAEAAEAAADm/+7/AAAEAAEAAADm/+3/AAAEAAEAAADl//T/AAADAAIAAADl//P/AAAEAAEAAADl//L/AAAEAAEAAADl//H/AAAEAAEAAADl//D/AAAEAAEAAADl/+//AAAEAAEAAADl/+7/AAAEAAEAAADl/+3/AAAEAAEAAAAHAOz/AAAEAAAAAAAGAOz/AAACAAAAAAAFAOz/AAAEAAAAAAAEAOz/AAACAAAAAAADAOz/AAAEAAAAAAACAOz/AAADAAAAAAABAOz/AAAEAAAAAAAAAOz/AAAEAAAAAAD//+z/AAAFAAAAAAD+/+z/AAAGAAAAAAD9/+z/AAAFAAAAAAD8/+z/AAAEAAAAAAD7/+z/AAAGAAAAAAD6/+z/AAADAAAAAAD5/+z/AAAFAAAAAAD4/+z/AAAFAAAAAAD3/+z/AAAFAAAAAAD2/+z/AAADAAAAAAD1/+z/AAAFAAAAAAD0/+z/AAADAAAAAADz/+z/AAACAAAAAADy/+z/AAAFAAAAAADx/+z/AAACAAAAAADw/+z/AAAEAAAAAADv/+z/AAAGAAAAAADu/+z/AAAFAAAAAADt/+z/AAAGAAAAAADs/+z/AAAEAAAAAADr/+z/AAACAAAAAADq/+z/AAAFAAAAAADp/+z/AAAEAAAAAADo/+z/AAAEAAAAAADn/+z/AAAGAAAAAADm/+z/AAAEAAAAAADl/+z/AAAFAAAAAADk//P/AAABAAEAAADk//L/AAACAAEAAADk//H/AAADAAEAAADk//D/AAABAAEAAADk/+//AAADAAEAAADk/+7/AAAAAAEAAADk/+3/AAACAAEAAADk/+z/AAABAAAAAADk//T/AAAAAAIAAAAIAOz/AAAEAAAAAADj/wcAAAADAAIAAADi/wcAAAADAAIAAADh/wcAAAAAAAIAAADj/wYAAAAEAAEAAADj/wUAAAAEAAEAAADj/wQAAAAEAAEAAADj/wMAAAAEAAEAAADj/wIAAAAEAAEAAADj/wEAAAAEAAEAAADj/wAAAAAEAAEAAADj////AAAEAAEAAADj//7/AAAEAAEAAADj//3/AAAEAAEAAADj//z/AAAEAAEAAADj//v/AAABAAAAAADi/wYAAAAEAAEAAADi/wUAAAAEAAEAAADi/wQAAAAEAAEAAADi/wMAAAAEAAEAAADi/wIAAAAEAAEAAADi/wEAAAAEAAEAAADi/wAAAAAEAAEAAADi////AAAEAAEAAADi//7/AAAEAAEAAADi//3/AAAEAAEAAADi//z/AAAEAAAAAADh/wYAAAACAAEAAADh/wUAAAADAAEAAADh/wQAAAACAAEAAADh/wMAAAACAAEAAADh/wIAAAACAAEAAADh/wEAAAADAAEAAADh/wAAAAACAAEAAADh////AAAAAAEAAADh//7/AAACAAEAAADh//3/AAABAAEAAADh//z/AAAAAAAAAAALAAcAAAAFAAIAAAALAAYAAAAFAAEAAAALAAUAAAAHAAEAAAALAAQAAAAGAAEAAAALAAMAAAAHAAEAAAALAAIAAAAHAAEAAAALAAEAAAAIAAEAAAALAAAAAAAIAAEAAAALAP//AAAGAAEAAAALAP7/AAAIAAEAAAALAP3/AAAIAAEAAAALAPz/AAAFAAEAAAALAPv/AAAHAAEAAAALAPr/AAAIAAEAAAALAPn/AAAHAAEAAAALAPj/AAAFAAEAAAALAPf/AAAIAAEAAAALAPb/AAAHAAEAAAALAPX/AAAIAAEAAAALAPT/AAAGAAEAAAALAPP/AAAFAAEAAAALAPL/AAAGAAEAAAALAPH/AAAFAAEAAAALAPD/AAAHAAEAAAALAO//AAAGAAEAAAALAO7/AAAGAAEAAAALAO3/AAAIAAEAAAALAOz/AAAIAAAAAAAKAAcAAAADAAIAAAAKAAYAAAAEAAEAAAAKAAUAAAAEAAEAAAAKAAQAAAAEAAEAAAAKAAMAAAAEAAEAAAAKAAIAAAAEAAEAAAAKAAEAAAAEAAEAAAAKAAAAAAAEAAEAAAAKAP//AAAEAAEAAAAKAP7/AAAEAAEAAAAKAP3/AAAEAAEAAAAKAPz/AAAEAAEAAAAKAPv/AAAEAAEAAAAKAPr/AAAEAAEAAAAKAPn/AAAEAAEAAAAKAPj/AAAEAAEAAAAKAPf/AAAEAAEAAAAKAPb/AAAEAAEAAAAKAPX/AAAEAAEAAAAKAPT/AAAEAAEAAAAKAPP/AAAEAAEAAAAKAPL/AAAEAAEAAAAKAPH/AAAEAAEAAAAKAPD/AAAEAAEAAAAKAO//AAAEAAEAAAAKAO7/AAAEAAEAAAAKAO3/AAAEAAEAAAAKAOz/AAAFAAAAAAAJAAcAAAADAAIAAAAJAAYAAAAEAAEAAAAJAAUAAAAEAAEAAAAJAAQAAAAEAAEAAAAJAAMAAAAEAAEAAAAJAAIAAAAEAAEAAAAJAAEAAAAEAAEAAAAJAAAAAAAEAAEAAAAJAP//AAAEAAEAAAAJAP7/AAAEAAEAAAAJAP3/AAAEAAEAAAAJAPz/AAAEAAEAAAAJAPv/AAAEAAEAAAAJAPr/AAAEAAEAAAAJAPn/AAAEAAEAAAAJAPj/AAAEAAEAAAAJAPf/AAAEAAEAAAAJAPb/AAAEAAEAAAAJAPX/AAAEAAEAAAAJAPT/AAAEAAEAAAAJAPP/AAAEAAEAAAAJAPL/AAAEAAEAAAAJAPH/AAAEAAEAAAAJAPD/AAAEAAEAAAAJAO//AAAEAAEAAAAJAO7/AAAEAAEAAAAJAO3/AAAEAAEAAAAJAOz/AAACAAAAAAA=")

[node name="Background" parent="." instance=ExtResource("5_sq2x1")]
tile_map_data = PackedByteArray("AAABAP7/AAADAAAAAAABAP//AAACAAEAAAABAAAAAAACAAEAAAAAAAAAAAABAAAAAAAAAP//AAABAAAAAAAAAP7/AAABAAAAAAD///7/AAABAAAAAAD+//7/AAACAAAAAAD9/wAAAAACAAAAAAD9////AAACAAAAAAD9//7/AAACAAAAAAD8/wAAAAACAAAAAAD8////AAACAAAAAAD8//7/AAACAAAAAAD7/wAAAAACAAAAAAD7////AAACAAAAAAD7//7/AAACAAAAAAD6/wAAAAACAAAAAAD6////AAACAAAAAAD6//7/AAACAAAAAAD5/wAAAAACAAAAAAD5////AAACAAAAAAD5//7/AAABAAAAAAABAP3/AAABAAAAAAABAPz/AAABAAAAAAABAPv/AAABAAAAAAABAPr/AAABAAAAAAABAPn/AAABAAAAAAAAAP3/AAABAAAAAAAAAPz/AAABAAAAAAAAAPv/AAABAAAAAAAAAPr/AAABAAAAAAAAAPn/AAABAAAAAAD///3/AAABAAAAAAD///z/AAABAAAAAAD///v/AAABAAAAAAD///r/AAABAAAAAAD///n/AAABAAAAAAABAPj/AAABAAAAAAABAPf/AAABAAAAAAABAPb/AAAAAAAAAAABAPX/AAABAAAAAAAAAPj/AAABAAAAAAAAAPf/AAABAAAAAAAAAPb/AAADAAEAAAAAAPX/AAAEAAAAAAD///j/AAABAAAAAAD///f/AAABAAAAAAD///b/AAABAAAAAAD///X/AAAAAAAAAAD0//j/AAABAAAAAAD0//n/AAABAAAAAAD0//r/AAABAAAAAAD0//v/AAABAAAAAAD0//z/AAABAAAAAAD0//3/AAABAAAAAAD0//7/AAABAAAAAAD0////AAABAAAAAAD0/wAAAAABAAAAAADx//7/AAABAAAAAADx////AAABAAAAAADy////AAABAAAAAADz////AAABAAAAAAD1/wAAAAABAAAAAAD2/wAAAAABAAAAAAD3/wAAAAABAAAAAAD4/wAAAAACAAAAAADx/wAAAAABAAAAAADy//7/AAABAAAAAADy/wAAAAABAAAAAADz//7/AAABAAAAAADz/wAAAAACAAAAAAD1//7/AAABAAAAAAD1////AAABAAAAAAD2//7/AAABAAAAAAD2////AAABAAAAAAD3//7/AAABAAAAAAD3////AAABAAAAAAD4//7/AAABAAAAAAD4////AAABAAAAAADs////AAABAAAAAADt////AAABAAAAAADu////AAABAAAAAADv////AAABAAAAAADw////AAABAAAAAADp//7/AAABAAAAAADp////AAABAAAAAADq//7/AAABAAAAAADq////AAABAAAAAADr//7/AAABAAAAAADr////AAABAAAAAAD///D/AAABAAAAAAD///H/AAABAAAAAAD///L/AAABAAAAAAD///P/AAAAAAAAAAD///T/AAABAAAAAAAAAPD/AAACAAEAAAAAAPH/AAADAAEAAAAAAPL/AAABAAAAAAAAAPP/AAAAAAAAAAAAAPT/AAABAAAAAAABAPD/AAABAAAAAAABAPH/AAAAAAAAAAABAPL/AAABAAAAAAABAPP/AAAAAAAAAAABAPT/AAABAAAAAAD4//f/AAABAAAAAAD4//j/AAABAAAAAAD5//f/AAABAAAAAAD5//j/AAABAAAAAAD5//n/AAABAAAAAAD6//f/AAABAAAAAAD6//j/AAABAAAAAAD6//n/AAABAAAAAAD7//f/AAABAAAAAAD7//j/AAABAAAAAAD7//n/AAABAAAAAAD8//f/AAABAAAAAAD8//j/AAABAAAAAAD8//n/AAABAAAAAAD9//f/AAABAAAAAAD9//j/AAABAAAAAAD9//n/AAABAAAAAAD+//f/AAABAAAAAAD+//j/AAABAAAAAAD+//n/AAABAAAAAAD0//D/AAABAAAAAAD0//H/AAABAAAAAAD0//L/AAABAAAAAAD0//P/AAABAAAAAAD0//T/AAABAAAAAAD0//X/AAABAAAAAAD0//b/AAABAAAAAAD0//f/AAABAAAAAAD1//D/AAABAAAAAAD1//H/AAABAAAAAAD1//L/AAABAAAAAAD1//P/AAABAAAAAAD1//T/AAABAAAAAAD1//X/AAABAAAAAAD1//b/AAABAAAAAAD1//f/AAABAAAAAAD2//D/AAACAAEAAAD2//H/AAADAAEAAAD2//L/AAABAAAAAAD2//P/AAABAAAAAAD2//T/AAABAAAAAAD2//X/AAABAAAAAAD2//b/AAABAAAAAAD2//f/AAABAAAAAAD3//D/AAABAAAAAAD3//H/AAAAAAAAAAD3//L/AAABAAAAAAD3//P/AAABAAAAAAD3//T/AAABAAAAAAD3//X/AAABAAAAAAD3//b/AAABAAAAAAD3//f/AAABAAAAAAD4//D/AAABAAAAAAD4//H/AAAAAAAAAAD4//L/AAABAAAAAAD4//P/AAABAAAAAAD4//T/AAABAAAAAAD4//X/AAABAAAAAAD4//b/AAABAAAAAAD5//D/AAABAAAAAAD5//H/AAAAAAAAAAD5//L/AAABAAAAAAD5//P/AAABAAAAAAD5//T/AAABAAAAAAD5//X/AAABAAAAAAD5//b/AAABAAAAAADs//D/AAABAAAAAADs//H/AAABAAAAAADs//L/AAACAAAAAADt//D/AAABAAAAAADt//H/AAABAAAAAADt//L/AAABAAAAAADu//D/AAABAAAAAADu//H/AAABAAAAAADu//L/AAABAAAAAADv//D/AAABAAAAAADv//H/AAABAAAAAADv//L/AAABAAAAAADw//D/AAABAAAAAADw//H/AAABAAAAAADw//L/AAABAAAAAADx//D/AAABAAAAAADx//H/AAABAAAAAADx//L/AAABAAAAAADy//D/AAABAAAAAADy//H/AAABAAAAAADy//L/AAACAAAAAADz//D/AAABAAAAAADz//H/AAABAAAAAADz//L/AAABAAAAAADn//X/AAABAAAAAADn//b/AAABAAAAAADn//f/AAABAAAAAADo//X/AAABAAAAAADo//b/AAACAAAAAADo//f/AAACAAAAAADp//X/AAABAAAAAADp//b/AAACAAAAAADp//f/AAACAAAAAADq//X/AAABAAAAAADq//b/AAACAAAAAADq//f/AAACAAAAAADr//X/AAABAAAAAADr//b/AAABAAAAAADr//f/AAABAAAAAADs//X/AAABAAAAAADs//b/AAABAAAAAADs//f/AAABAAAAAADt//X/AAABAAAAAADt//b/AAABAAAAAADt//f/AAABAAAAAADu//X/AAABAAAAAADu//b/AAABAAAAAADu//f/AAABAAAAAADv//X/AAABAAEAAADv//b/AAABAAAAAADv//f/AAACAAAAAADw//X/AAABAAAAAADw//b/AAABAAAAAADw//f/AAACAAAAAADx//X/AAABAAAAAADx//b/AAABAAAAAADx//f/AAABAAAAAADy//X/AAABAAAAAADy//b/AAABAAAAAADy//f/AAABAAAAAADz//X/AAABAAAAAADz//b/AAABAAAAAADz//f/AAABAAAAAADm//f/AAABAAAAAADm//b/AAABAAAAAADm//X/AAABAAAAAADl//f/AAABAAAAAADl//b/AAABAAAAAADl//X/AAABAAAAAADk//f/AAABAAAAAADk//b/AAABAAAAAADk//X/AAABAAAAAADl//j/AAABAAAAAADk//j/AAABAAAAAADj//f/AAABAAAAAADj//T/AAABAAAAAADi//T/AAABAAAAAADk//n/AAABAAAAAADj//n/AAABAAAAAADi//n/AAABAAAAAADj//r/AAABAAAAAADk//r/AAABAAAAAADj//X/AAABAAAAAAD/////AAABAAAAAAD+////AAACAAAAAAD+/wAAAAACAAAAAAD//wAAAAACAAAAAAA=")

[node name="Computer" parent="." instance=ExtResource("6_v3yo5")]
position = Vector2(-1272, -992)

[node name="Computer2" parent="." instance=ExtResource("6_v3yo5")]
position = Vector2(-1560, -56)

[node name="Crate" parent="." instance=ExtResource("7_rx8wt")]
position = Vector2(-72, 0)

[node name="Crate3" parent="." instance=ExtResource("7_rx8wt")]
position = Vector2(-88, -72)

[node name="Crate5" parent="." instance=ExtResource("7_rx8wt")]
position = Vector2(-144, 0)

[node name="Crate4" parent="." instance=ExtResource("8_157rd")]
position = Vector2(-88, -144)

[node name="Pipe-Fore" type="StaticBody2D" parent="."]
position = Vector2(72, -248)

[node name="Sprite2D" type="Sprite2D" parent="Pipe-Fore"]
position = Vector2(36, 36)
texture = ExtResource("9_kaaah")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pipe-Fore"]
position = Vector2(36, 36)
scale = Vector2(0.99, 0.99)
shape = SubResource("RectangleShape2D_r8dgx")

[node name="Pipe-Fore2" parent="." instance=ExtResource("9_iw62d")]
position = Vector2(-504, -752)

[node name="LevelMusic" parent="." instance=ExtResource("10_v07d4")]

[node name="Ladder" parent="." instance=ExtResource("11_hmgbi")]
tile_map_data = PackedByteArray("AAD0//j/AAAAAAAAAAD0//n/AAAAAAAAAAD0//r/AAAAAAAAAAD0//v/AAAAAAAAAAD0//z/AAAAAAAAAAD0//3/AAAAAAAAAAD0//7/AAAAAAAAAAD0////AAAAAAAAAAD0/wAAAAAAAAAAAAD0//P/AAAAAAAAAAD0//T/AAAAAAAAAAD0//X/AAAAAAAAAAD0//b/AAAAAAAAAAD0//f/AAAAAAAAAAA=")

[node name="OutOfBounds" type="Area2D" parent="."]
position = Vector2(-1760, -684)
script = ExtResource("12_rkepe")
death_message = "s  t  o  o  p  i  d"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds"]
shape = SubResource("RectangleShape2D_8ju3k")

[node name="Timer" type="Timer" parent="OutOfBounds"]
one_shot = true

[node name="LevelComplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_c8f7v")

[node name="LevelFailed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_styiq")

[node name="Crate2" parent="." instance=ExtResource("8_157rd")]
position = Vector2(-152, -72)

[node name="Label" type="Label" parent="."]
offset_left = -1376.0
offset_top = -500.0
offset_right = -1105.0
offset_bottom = -477.0
theme_override_font_sizes/font_size = 15
text = "don't get yourself seen by cameras"

[connection signal="body_entered" from="OutOfBounds" to="OutOfBounds" method="_on_body_entered"]
[connection signal="timeout" from="OutOfBounds/Timer" to="OutOfBounds" method="_on_timer_timeout"]
